fix(styles): prevent overflow on root

--- a/packages/client/src/index.css
+++ b/packages/client/src/index.css
@@ -11,6 +11,7 @@ body,
 html,
 #root {
   height: 100%;
+  overflow: hidden;
 }
 
 code {
